[package]
name = "tokio-serial"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Tae-il Lim <trlim@iotok.kr>"]
description = """
Serial port for Tokio
"""

[dependencies]
mio = "0.6"
futures = "0.1"
tokio-core = "0.1"
mio-serial = { git = "https://github.com/trlim/mio-serial", branch = "tokio" }

[dev-dependencies]
dotenv = "0.8"
